--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,16 @@ body {
   padding: 20px;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+}
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)),
     url("../images/pinklake.png");
@@ -59,4 +69,45 @@ header a {
   header h2 {
     font-size: 24px;
   }
+}
+
+footer {
+  text-align: center;
+  color: white;
+  padding: 20px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("../images/footerimg.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+footer h3 {
+  font-weight: 700;
+  opacity: 0.8;
+  font-size: 24px;
+  line-height: 1.5em;
+}
+
+footer p {
+  font-weight: 400;
+  opacity: 0.8;
+  font-size: 16px;
+  line-height: 1.5em;
+}
+footer ul {
+  padding: 0;
+  margin: 0;
+}
+
+footer li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+footer a {
+  color: white;
+  opacity: 0.8;
+  text-decoration: none;
+  font-weight: 600;
 }
