styled main section and footer and used grids

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,12 @@ body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4;
+  background-color: #1f0443;
+}
+
+main {
+  background-color: white;
+  padding: 50px 30px;
 }
 
 .container {
@@ -13,12 +18,25 @@ body {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
+  grid-gap: 64px;
 }
+
+.img-responsive {
+  max-width: 100%;
+}
+
+.grid-2-columns {
+  grid-template-columns: 1fr 1fr;
+}
+
+.grid-3-columns-with-first-narrow {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
 section {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 100px 0;
 }
 
 header {
@@ -29,6 +47,32 @@ header {
   color: white;
   text-align: center;
   padding: 100px 20px;
+}
+
+main h2 {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.5em;
+  letter-spacing: 5px;
+  color: #272044;
+  opacity: 0.3;
+  text-transform: uppercase;
+}
+
+main h3 {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.5em;
+  color: #272044;
+}
+
+main p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5em;
+  color: #555555;
+  opacity: 0.8;
 }
 
 header h1 {
@@ -74,7 +118,6 @@ header a {
 footer {
   text-align: center;
   color: white;
-  padding: 20px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url("../images/footerimg.png");
   background-size: cover;
@@ -82,7 +125,7 @@ footer {
 }
 
 footer h3 {
-  font-weight: 700;
+  font-weight: 500;
   opacity: 0.8;
   font-size: 24px;
   line-height: 1.5em;
@@ -103,6 +146,7 @@ footer li {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  line-height: 2em;
 }
 
 footer a {
@@ -110,4 +154,29 @@ footer a {
   opacity: 0.8;
   text-decoration: none;
   font-weight: 600;
+}
+@media (max-width: 960px) {
+  header {
+    padding: 60px 0;
+  }
+
+  header h1 {
+    font-size: 48px;
+  }
+
+  header h2 {
+    font-size: 20px;
+  }
+
+  header h3 {
+    font-size: 12px;
+  }
+  .grid {
+    grid-template-columns: 1fr;
+    grid-gap: 32px;
+  }
+
+  section {
+    padding: 30px;
+  }
 }
